objects/LiteratureOrder__c.object
<CustomObject>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CostCenter__c</fullName>
        <description>CostCenter
varchar2(100)</description>
        <label>Cost Center</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ElectronicOrder__c</fullName>
        <defaultValue>false</defaultValue>
        <description>ElectronicOrder
char(1)</description>
        <label>Electronic Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiteratureShipMethod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Literature Ship Method</label>
        <referenceTo>LiteratureShipMethod__c</referenceTo>
        <relationshipLabel>Literature Orders</relationshipLabel>
        <relationshipName>LiteratureOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>NeedByDate__c</fullName>
        <description>NeedByDate
Date</description>
        <label>Need By Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderClassification__c</fullName>
        <description>OrderClassification
varchar2(50)</description>
        <label>Order Classification</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderDate__c</fullName>
        <description>OrderDate
Date</description>
        <label>Order Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OrderId__c</fullName>
        <description>Id
varchar2(50)</description>
        <externalId>true</externalId>
        <label>Order Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OrderIdurl__c</fullName>
        <formula>HYPERLINK('/'&amp; Id, OrderId__c, '_self'  )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderStatus__c</fullName>
        <description>OrderStatus
40</description>
        <label>Order Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecipientInfo__c</fullName>
        <description>This field contains all the information about the rep in comma-separated key-value pairs.</description>
        <label>Recipient Info</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Rep/Contact associated to for this Order</description>
        <inlineHelpText>Rep/Contact associated to for this Order</inlineHelpText>
        <label>Recipient</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>LitOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SoldToParty__c</fullName>
        <description>SoldToParty
100</description>
        <label>Sold To Party</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>LitOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VendorOrderId__c</fullName>
        <description>VendorOrderId
varchar2(50)</description>
        <label>Vendor Order Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vendor__c</fullName>
        <description>Vendor
varchar2(50)</description>
        <label>Vendor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <description>This contains the order details from Literature Fulfillment application (Nexttouch).</description>
    <label>Literature Order</label>
    <nameField>
        <displayFormat>LO-{0000000000}</displayFormat>
        <label>Literature Order Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Literature Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ElectronicOrder__c</columns>
        <columns>LiteratureShipMethod__c</columns>
        <columns>NeedByDate__c</columns>
        <columns>OrderClassification__c</columns>
        <columns>OrderDate__c</columns>
        <columns>OrderId__c</columns>
        <columns>OrderStatus__c</columns>
        <columns>Recipient__c</columns>
        <columns>SoldToParty__c</columns>
        <columns>User__c</columns>
        <columns>Vendor__c</columns>
        <columns>VendorOrderId__c</columns>
        <columns>CostCenter__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>